# take-the-food

./: .gitignore  LICENSE  README.md  azure-pipelines.yml
.circleci/: config.yml
src/client/html-canvas/: index.html  package.json  webpack.config.js
src/client/html-canvas/src/: audio.js  config.json  game.js  index.js  joystick.js  network.js  observerInterface.js  player.js  styles.scss
src/client/html-canvas/src/styles/: styles.scss  variables.scss
src/client/html-canvas/src/utils/: random.js  vector.js
src/server/python/: Dockerfile
src/server/python-fastapi/: Dockerfile  app.py  docker-compose.yml  pyproject.toml
src/server/python-fastapi/.circleci/: config.yml
src/server/python-fastapi/manifests/: fastapi-deployment.yaml  fastapi-service.yaml
