[tool.poetry]
name = "python_fast_api"
version = "0.1.0"
description = ""
authors = ["Cleiton Junior Mittmann <mittmannv8@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.65.1"
uvicorn = {extras = ["standard"], version = "^0.17.0"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
